@@ -3,7 +3,10 @@ X3 C++ PluginFramework
 2011-01-09, Zhang Yun Gui <rhcad@hotmail.com>
 
 	* ConfigXml v1.0.0.2:
-	* pkg_Core\Modules\ConfigXml\ConfigXmlImpl.h: automatic call CoInitializeEx to avoid caller forget it.
+	* pkg_Core\Modules\ConfigXml\ConfigXmlImpl.h: 
+		automatic call CoInitializeEx to avoid caller forget it.
+	* pkg_Core\Modules\ConfigXml\XmlUtil\XmlUtil.cpp: support MSXML6 and MSXML4.
+	* add InitXMLDLL.h for applications to Ensure MSXML correctly initialized.
 
 2011-01-06, Zhang Yun Gui <rhcad@hotmail.com>
 
